--- a/style.css
+++ b/style.css
@@ -10,10 +10,12 @@
 .game {
 	width: 20px;
 	height: 20px;
-	background-color: blue;
+	background-color: white;
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row; 
 	justify-content: center;
 	border: 1px solid black;
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
 }
