--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 	margin: auto;
 	max-width: 900px;
 	max-height: 300px;
+	width: 900px;
+	height: 300px;
+	min-height: 300px;
+	min-width: 900px;
 }
 .game {
 	width: 20px;
